tensorflow-serving-cluster/tensorflow-serving/kubernetes/deploy.yaml
# Copyright 2017 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

apiVersion: v1
kind: Namespace
metadata:
  name: graphene-tf-serving

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: graphene-tf-serving-service
  name: graphene-tf-serving-service
  namespace: graphene-tf-serving
spec:
  type: NodePort # LoadBalancer ClusterIP
  ports:
  - name: grpc
    protocol: TCP
    port: 8500
    targetPort: 8500
    nodePort: 30500
  selector:
    app: graphene-tf-serving-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphene-tf-serving-deployment
  namespace: graphene-tf-serving
spec:
  selector:
    matchLabels:
      app: graphene-tf-serving-app
  replicas: 1
  template:
    metadata:
      labels:
        app: graphene-tf-serving-app
    spec:
      containers:
      - name: graphene-tf-serving-container
        image: graphene_tf_serving:{YOUR TAG}
        imagePullPolicy: Never
        ports:
        - name: grpc
          containerPort: 8500
        volumeMounts:
        - name: sgx-path
          mountPath: /dev/sgx
        - name: model-path
          mountPath: /graphene/Examples/tensorflow-serving-cluster/tensorflow-serving/models/resnet50-v15-fp32
        - name: ssl-path
          mountPath: /graphene/Examples/tensorflow-serving-cluster/tensorflow-serving/ssl.cfg
        - name: asem-path
          mountPath: /var/run/aesmd/aesm
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: "32"
          requests:
            cpu: "32"
      volumes:
      - name: sgx-path
        hostPath:
          path: /dev/sgx
      - name: model-path
        hostPath:
          path: <Your graphene repository>/Examples/tensorflow-serving-cluster/tensorflow_serving/models/resnet50-v15-fp32
      - name: ssl-path
        hostPath:
          path: <Your graphene repository>/Examples/tensorflow-serving-cluster/tensorflow_serving/ssl_configure/ssl.cfg
      - name: asem-path
        hostPath:
          path: /var/run/aesmd/aesm
